верстка структуры сайта

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </div>
         </section>
         <section class="works__section">
-            <h2 class="h2-style works__h2">Мои работы</h2>
+            <h2 class="h2-style h2-style--blue">Мои работы</h2>
             <div class="works__container">
                 <img src="./images/works-1-img.png" alt="" class="works__img">
                 <img src="./images/works-2-img.png" alt="" class="works__img">
@@ -71,7 +71,7 @@
         </section>
         <section class="stages__section">
             <div class="container stages__container">
-                <h2 class="h2-style stages__h2">Этапы работы</h2>
+                <h2 class="h2-style stages__h2 h2-style--blue">Этапы работы</h2>
                 <ul class="stages__list">
                     <li class="stages__item">
                         <div class="stages__number">01</div>
@@ -165,7 +165,7 @@
         </section>
         <section class="faq__section">
             <div class="container faq__container">
-                <h2 class="h2-style faq__h2">Часто задаваемые вопросы</h2>
+                <h2 class="h2-style faq__h2 h2-style--blue">Часто задаваемые вопросы</h2>
                 <ul class="faq__questions-list">
                     <li class="faq__questions-item">Перед началом проекта, вы выезжаете на объект?</li>
                     <li class="faq__questions-item">Что входит в дизайн-проект?</li>
@@ -176,8 +176,8 @@
         </section>
 
         <section class="contacts__section">
-            <div class="container">
-                <h2 class="h2-style contacts__h2">Контакты</h2>
+            <div class="container contacts__container">
+                <h2 class="h2-style contacts__h2 h2-style--blue">Контакты</h2>
                 <a href="" class="button-style contacts__button--order">Заказать проект</a>
                 <ul class="contacts__list">
                     <li class="contacts__item">
