--- a/index.html
+++ b/index.html
@@ -167,10 +167,18 @@
             <div class="container faq__container">
                 <h2 class="h2-style faq__h2 h2-style--blue">Часто задаваемые вопросы</h2>
                 <ul class="faq__questions-list">
-                    <li class="faq__questions-item">Перед началом проекта, вы выезжаете на объект?</li>
-                    <li class="faq__questions-item">Что входит в дизайн-проект?</li>
-                    <li class="faq__questions-item">Каков в среднем бюджет на реализацию ваших проектов?</li>
-                    <li class="faq__questions-item">Берете ли вы проекты с маленькой площадью помещения?</li>
+                    <li class="faq__questions-item">
+                        <a href="" class="faq__questions-link">Перед началом проекта, вы выезжаете на объект?</a>
+                    </li>
+                    <li class="faq__questions-item">
+                        <a href="" class="faq__questions-link">Что входит в дизайн-проект?</a>
+                    </li>
+                    <li class="faq__questions-item">
+                        <a href="" class="faq__questions-link">Каков в среднем бюджет на реализацию ваших проектов?</a>
+                    </li>
+                    <li class="faq__questions-item">
+                        <a href="" class="faq__questions-link">Берете ли вы проекты с маленькой площадью помещения?</a>
+                    </li>
                 </ul>
             </div>
         </section>
@@ -182,15 +190,15 @@
                 <ul class="contacts__list">
                     <li class="contacts__item">
                         <p class="contacts__content">По вопросам сотрудничества</p>
-                        <a href="" class="contacts__link">infoanastpich@mail.ru</a>
+                        <a href="mailto:infoanastpich@mail.ru" class="contacts__link">infoanastpich@mail.ru</a>
                     </li>
                     <li class="contacts__item">
                         <p class="contacts__content">Telegram | Whatsapp</p>
-                        <a href="" class="contacts__link">+7 977 666 99 77</a>
+                        <a href="tel: +74951234567" class="contacts__link">+7 977 666 99 77</a>
                     </li>
                     <li class="contacts__item">
                         <p class="contacts__content">Адрес</p>
-                        <a href="" class="contacts__link">г.Москва, ул. Красноказарменная, 136</a>
+                        <a href="https://yandex.uz/maps/-/CCUG5GTYhB" class="contacts__link">г.Москва, ул. Красноказарменная, 6</a>
                     </li>
                 </ul>
             </div>
