hover эффекты и исправление недочетов

--- a/index.html
+++ b/index.html
@@ -23,8 +23,38 @@
                 <li class="header__nav-item"><a href="" class="header__nav-link">Контакты</a></li>
             </ul>
             <ul class="header__socials-list">
-                <li class="header__socials-item"><a href="" class="header__socials-link header__socials-link--1"></a></li>
-                <li class="header__socials-item"><a href="" class="header__socials-link header__socials-link--2"></a></li>
+                <li class="header__socials-item">
+                    <a href="" class="header__socials-link">
+                        <svg width="32" height="33" viewBox="0 0 32 33" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <g clip-path="url(#clip0_32_3928)">
+                            <path d="M26.9296 5.41069C23.9501 2.43113 19.9886 0.790283 15.775 0.790283C11.5614 0.790283 7.59991 2.43113 4.62041 5.41069C1.64085 8.3902 0 12.3517 0 16.5653C0 20.7789 1.64085 24.7404 4.62041 27.7199C7.59991 30.6994 11.5614 32.3403 15.775 32.3403C19.9886 32.3403 23.9501 30.6994 26.9296 27.7199C29.9091 24.7403 31.55 20.7789 31.55 16.5653C31.55 12.3517 29.9092 8.3902 26.9296 5.41069ZM15.775 31.344C7.62598 31.344 0.99629 24.7143 0.99629 16.5653C0.99629 8.41626 7.62598 1.78657 15.775 1.78657C23.924 1.78657 30.5537 8.41626 30.5537 16.5653C30.5537 24.7143 23.924 31.344 15.775 31.344Z" fill="#F2F2F2"/>
+                            <path d="M24.7094 6.86852C24.5565 6.75329 24.351 6.73604 24.1809 6.82403L4.91877 16.7872C4.75227 16.8733 4.64819 17.0456 4.64942 17.2331C4.65066 17.4205 4.75708 17.5914 4.92481 17.6753L9.9632 20.1943V25.186C9.9632 25.3167 10.0076 25.4459 10.0975 25.5408C10.197 25.6457 10.3292 25.6983 10.4614 25.6983C10.5447 25.6983 10.628 25.6775 10.7034 25.6356L16.4677 22.4332L20.8796 24.324C20.9734 24.3642 21.0773 24.3809 21.1777 24.3621C21.3845 24.3235 21.5382 24.1651 21.5774 23.9695L22.6936 18.388C22.7552 18.0797 22.5195 17.7922 22.2051 17.7922C21.9676 17.792 21.7632 17.9596 21.7166 18.1925L20.7207 23.1719L16.6355 21.4212C16.494 21.3605 16.3322 21.3688 16.1973 21.4435L10.9595 24.3535V19.8864C10.9595 19.6977 10.8529 19.5253 10.6842 19.4408L6.24652 17.222L23.718 8.18506L22.2018 15.7659C22.1401 16.0742 22.3759 16.3617 22.6903 16.3617C22.9277 16.3617 23.1322 16.1941 23.1788 15.9613L24.8982 7.36408C24.9358 7.17638 24.8624 6.98369 24.7094 6.86852Z" fill="#F2F2F2"/>
+                            <path d="M21.4798 10.9428C21.3233 10.7446 21.043 10.6949 20.8278 10.8274L12.1931 16.1411C12.0458 16.2318 11.9561 16.3924 11.9561 16.5654V21.8791C11.956 22.1102 12.1149 22.3108 12.3396 22.3639C12.3779 22.373 12.4163 22.3773 12.4543 22.3773C12.6396 22.3773 12.8139 22.2735 12.8997 22.1019L14.8561 18.189L21.4411 11.6039C21.6198 11.4252 21.6364 11.1411 21.4798 10.9428ZM14.0945 17.5415C14.0567 17.5793 14.0252 17.6231 14.0013 17.671L12.9523 19.7687V16.8437L17.7364 13.8996L14.0945 17.5415Z" fill="#F2F2F2"/>
+                            </g>
+                            <defs>
+                            <clipPath id="clip0_32_3928">
+                            <rect width="31.55" height="31.55" fill="white" transform="translate(0 0.790283)"/>
+                            </clipPath>
+                            </defs>
+                        </svg>
+                    </a>
+                </li>
+                <li class="header__socials-item">
+                    <a href="" class="header__socials-link">
+                        <svg width="33" height="32" viewBox="0 0 33 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <g clip-path="url(#clip0_32_3938)">
+                            <path d="M27.3832 4.62041C24.4037 1.64091 20.4423 0 16.2286 0C12.015 0 8.05353 1.64091 5.07402 4.62041C2.09452 7.59991 0.453613 11.5613 0.453613 15.775C0.453613 18.9535 1.39099 22.0065 3.16728 24.6227L0.493544 30.8614C0.318355 31.2701 0.756789 31.6941 1.15998 31.502L7.12755 28.6603C9.79894 30.5519 12.9392 31.55 16.2286 31.55C20.4423 31.55 24.4037 29.9092 27.3832 26.9296C30.3628 23.9501 32.0036 19.9886 32.0036 15.775C32.0036 11.5613 30.3628 7.59991 27.3832 4.62041ZM16.2286 30.562C13.0519 30.562 10.024 29.5692 7.47226 27.6907C7.32708 27.5838 7.12977 27.5651 6.96702 27.6426L1.91748 30.0471L4.18304 24.761C4.25058 24.6033 4.2316 24.422 4.13276 24.2819C2.37219 21.7831 1.44158 18.8415 1.44158 15.775C1.44158 7.62142 8.07503 0.987971 16.2286 0.987971C24.3822 0.987971 31.0156 7.62142 31.0156 15.775C31.0156 23.9286 24.3822 30.562 16.2286 30.562Z" fill="#F2F2F2"/>
+                            <path d="M24.9204 5.91979C24.7159 5.73917 24.4037 5.75877 24.2231 5.96329C24.0426 6.16781 24.0621 6.47998 24.2666 6.66053C26.8813 8.9683 28.3811 12.2904 28.3811 15.7751C28.3811 22.476 22.9295 27.9275 16.2287 27.9275C9.52784 27.9275 4.07635 22.476 4.07635 15.7751C4.07635 9.07423 9.52784 3.62274 16.2287 3.62274C18.3653 3.62274 20.4663 4.18484 22.3045 5.24824C22.5407 5.38491 22.8429 5.30413 22.9795 5.06794C23.1162 4.83174 23.0355 4.52961 22.7994 4.39294C20.8108 3.24278 18.5387 2.63477 16.2287 2.63477C8.98305 2.63477 3.08838 8.52944 3.08838 15.7751C3.08838 23.0207 8.98305 28.9154 16.2287 28.9154C23.4744 28.9154 29.369 23.0207 29.369 15.7751C29.369 12.0071 27.7475 8.41501 24.9204 5.91979Z" fill="#F2F2F2"/>
+                            <path d="M24.6183 21.131L24.1445 18.5647C24.1078 18.3659 23.9537 18.2096 23.7556 18.1699L20.0297 17.4248C19.8677 17.3926 19.7003 17.4432 19.5835 17.56L18.0537 19.0899C15.4752 17.9389 14.0504 16.5111 12.7954 13.8222L14.3206 12.2971C14.4373 12.1803 14.488 12.0129 14.4556 11.8509L13.7105 8.12488C13.6709 7.92671 13.5145 7.77265 13.3158 7.73593L10.7494 7.26212C10.6835 7.24992 10.6157 7.25134 10.5503 7.26619C9.87878 7.41882 9.26596 7.75731 8.77835 8.24498C7.93396 9.08937 7.61143 10.3231 7.84578 11.8127C8.05929 13.1702 8.48997 14.6466 9.05836 15.97C9.16607 16.2208 9.45662 16.3368 9.70723 16.229C9.9579 16.1213 10.0738 15.8308 9.96616 15.5801C9.42926 14.3302 9.02286 12.9376 8.82173 11.6591C8.63594 10.4778 8.85636 9.56416 9.47695 8.94358C9.80964 8.61082 10.222 8.3734 10.6746 8.25299L12.8074 8.64675L13.4352 11.7854L11.8545 13.3661C11.7097 13.5108 11.6692 13.7298 11.7527 13.9168C13.1897 17.1349 14.8755 18.8193 17.9726 20.1318C18.1581 20.2102 18.3723 20.1685 18.5147 20.0262L20.0953 18.4455L23.2339 19.0732L23.6277 21.2061C23.5073 21.6585 23.2698 22.0709 22.9372 22.4037C22.3165 23.0243 21.4027 23.2447 20.2216 23.0589C17.8602 22.6874 14.5847 21.541 12.4735 19.4382L12.4432 19.4078C11.8698 18.8322 11.336 18.134 10.8565 17.3324C10.7165 17.0983 10.4132 17.022 10.1789 17.1621C9.94478 17.3021 9.86855 17.6055 10.0086 17.8396C10.5294 18.7102 11.1129 19.4724 11.745 20.1071L11.7755 20.1375C14.0548 22.4078 17.5536 23.6394 20.068 24.0348C21.0705 24.1926 22.1476 24.1186 23.031 23.5787C23.2506 23.4446 23.4537 23.2842 23.6356 23.1023C24.1234 22.6145 24.4618 22.0018 24.6144 21.3302C24.6292 21.2647 24.6305 21.1969 24.6183 21.131Z" fill="#F2F2F2"/>
+                            </g>
+                            <defs>
+                            <clipPath id="clip0_32_3938">
+                            <rect width="31.55" height="31.55" fill="white" transform="translate(0.453613)"/>
+                            </clipPath>
+                            </defs>
+                        </svg>
+                    </a>
+                </li>
             </ul>
             <button class="header__burger-menu"></button>
         </div>
@@ -51,22 +81,22 @@
         <section class="works__section">
             <h2 class="h2-style h2-style--blue">Мои работы</h2>
             <div class="works__container">
-                <img src="./images/works-1-img.png" alt="" class="works__img">
-                <img src="./images/works-2-img.png" alt="" class="works__img">
-                <img src="./images/works-3-img.png" alt="" class="works__img">
-                <img src="./images/works-4-img.png" alt="" class="works__img">
-                <img src="./images/works-1-img.png" alt="" class="works__img">
-                <img src="./images/works-2-img.png" alt="" class="works__img">
-                <img src="./images/works-3-img.png" alt="" class="works__img">
-                <img src="./images/works-4-img.png" alt="" class="works__img">
-                <img src="./images/works-1-img.png" alt="" class="works__img">
-                <img src="./images/works-2-img.png" alt="" class="works__img">
-                <img src="./images/works-3-img.png" alt="" class="works__img">
-                <img src="./images/works-4-img.png" alt="" class="works__img">
-                <img src="./images/works-1-img.png" alt="" class="works__img">
-                <img src="./images/works-2-img.png" alt="" class="works__img">
-                <img src="./images/works-3-img.png" alt="" class="works__img">
-                <img src="./images/works-4-img.png" alt="" class="works__img">
+                <img src="./images/works-1-img.jpg" alt="" class="works__img">
+                <img src="./images/works-2-img.jpg" alt="" class="works__img">
+                <img src="./images/works-3-img.jpg" alt="" class="works__img">
+                <img src="./images/works-4-img.jpg" alt="" class="works__img">
+                <img src="./images/works-4-img.jpg" alt="" class="works__img">
+                <img src="./images/works-3-img.jpg" alt="" class="works__img">
+                <img src="./images/works-2-img.jpg" alt="" class="works__img">
+                <img src="./images/works-1-img.jpg" alt="" class="works__img">
+                <img src="./images/works-1-img.jpg" alt="" class="works__img">
+                <img src="./images/works-2-img.jpg" alt="" class="works__img">
+                <img src="./images/works-3-img.jpg" alt="" class="works__img">
+                <img src="./images/works-4-img.jpg" alt="" class="works__img">
+                <img src="./images/works-3-img.jpg" alt="" class="works__img">
+                <img src="./images/works-1-img.jpg" alt="" class="works__img">
+                <img src="./images/works-4-img.jpg" alt="" class="works__img">
+                <img src="./images/works-2-img.jpg" alt="" class="works__img">
             </div>
         </section>
         <section class="stages__section">
@@ -80,23 +110,23 @@
                     </li>
                     <li class="stages__item">
                         <div class="stages__number">02</div>
-                        <h3 class="stages__heading">Договор и ТЗ</h3>
-                        <div class="stages__text-content">Подписываем договор/аванс в размере 30%. Связываемся с замерщиками в вашем городе, они делают для нас фотофиксацию и замеры помещений.</div>
+                        <h3 class="stages__heading">Планировочное решение</h3>
+                        <div class="stages__text-content">Создаем планироваочное решение, выбираем один вариант и дорбатываем его. Вносим необходимые корректировки.</div>
                     </li>
                     <li class="stages__item">
                         <div class="stages__number">03</div>
-                        <h3 class="stages__heading">Договор и ТЗ</h3>
-                        <div class="stages__text-content">Подписываем договор/аванс в размере 30%. Связываемся с замерщиками в вашем городе, они делают для нас фотофиксацию и замеры помещений.</div>
+                        <h3 class="stages__heading">Коллажи и 3D визуализация</h3>
+                        <div class="stages__text-content">Предоплата перед разработкой коллажей-30%. Коллажи отражают общее цветовое решение. <br> Создаем планироваочное решение, выбираем один вариант и дорбатываем его. Вносим необходимые корректировки.</div>
                     </li>
                     <li class="stages__item">
                         <div class="stages__number">04</div>
-                        <h3 class="stages__heading">Договор и ТЗ</h3>
-                        <div class="stages__text-content">Подписываем договор/аванс в размере 30%. Связываемся с замерщиками в вашем городе, они делают для нас фотофиксацию и замеры помещений.</div>
+                        <h3 class="stages__heading">Документация</h3>
+                        <div class="stages__text-content">После утверждения всех 3D визуализаций, вносится аванс - 10% за этап документации. Мы готовим детальные чертежи по помещениям (планы и развертки), чертежи индивидуальных конструкций, а также ведомости по материалам. После чего презентуем готовый дизайн-проект.</div>
                     </li>
                     <li class="stages__item">
                         <div class="stages__number">05</div>
-                        <h3 class="stages__heading">Договор и ТЗ</h3>
-                        <div class="stages__text-content">Подписываем договор/аванс в размере 30%. Связываемся с замерщиками в вашем городе, они делают для нас фотофиксацию и замеры помещений.</div>
+                        <h3 class="stages__heading">Реализация</h3>
+                        <div class="stages__text-content">Осуществляем все строительные и отделочные работы под ключ. Обеспечиваем полную комплектацию объекта и декорируем ваш новый дом.</div>
                     </li>
                 </ul>
             </div>
@@ -124,9 +154,9 @@
                     <li class="prices__offers-item">
                         <div class="prices__offers-heading prices__offers-heading--2">
                             <p class="">Пакет</p>
-                            <p class="">“Дизайн-проект”</p>
+                            <p class="">“Проект с Авторским надзором”</p>
                         </div>
-                        <p class="prices__offers-cost">от <span>60$</span> за кв.м</p>
+                        <p class="prices__offers-cost">от <span>80$</span> за кв.м</p>
                         <p class="prices__offers-request">Идеальный вариант для удаленной работы (от 100 кв.м., 3 правки)</p>
                         <ul class="prices__offers-conditions-list">
                             <li class="prices__offers-conditions-item">Планировочное решение</li>
@@ -134,15 +164,16 @@
                             <li class="prices__offers-conditions-item">3Д Визуализация</li>
                             <li class="prices__offers-conditions-item">Подбор материалов</li>
                             <li class="prices__offers-conditions-item">Строительные чертежи</li>
+                            <li class="prices__offers-conditions-item">Авторский надзор</li>
                         </ul>
                         <p class="prices__offers-details">* до 100 кв.м. стоимость уточняется у менеджера</p>
                     </li>
                     <li class="prices__offers-item">
                         <div class="prices__offers-heading prices__offers-heading--3">
                             <p class="">Пакет</p>
-                            <p class="">“Дизайн-проект”</p>
+                            <p class="">“Дизайн-проект под ключ”</p>
                         </div>
-                        <p class="prices__offers-cost">от <span>60$</span> за кв.м</p>
+                        <p class="prices__offers-cost">от <span>100$</span> за кв.м</p>
                         <p class="prices__offers-request">Идеальный вариант для удаленной работы (от 100 кв.м., 3 правки)</p>
                         <ul class="prices__offers-conditions-list">
                             <li class="prices__offers-conditions-item">Планировочное решение</li>
@@ -150,6 +181,7 @@
                             <li class="prices__offers-conditions-item">3Д Визуализация</li>
                             <li class="prices__offers-conditions-item">Подбор материалов</li>
                             <li class="prices__offers-conditions-item">Строительные чертежи</li>
+                            <li class="prices__offers-conditions-item">Управление стройкой</li>
                         </ul>
                         <p class="prices__offers-details">* до 100 кв.м. стоимость уточняется у менеджера</p>
                     </li>
@@ -161,7 +193,6 @@
                 <p class="calculate-now__content">Узнать <span>стоимость проекта</span> прямо сейчас</p>
                 <a href="" class="button-style">расcчитать</a>
             </div>
-
         </section>
         <section class="faq__section">
             <div class="container faq__container">
@@ -182,7 +213,6 @@
                 </ul>
             </div>
         </section>
-
         <section class="contacts__section">
             <div class="container contacts__container">
                 <h2 class="h2-style contacts__h2 h2-style--blue">Контакты</h2>
@@ -203,8 +233,6 @@
                 </ul>
             </div>
         </section>
-
     </main>
-    
 </body>
 </html>
