--- a/index.html
+++ b/index.html
@@ -202,25 +202,37 @@
                 <h2 class="h2-style faq__h2 h2-style--blue">Часто задаваемые вопросы</h2>
                 <ul class="faq__questions-list">
                     <li class="faq__questions-item">
-                        <button class="faq__questions-button">Перед началом проекта, вы выезжаете на объект?</button>
+                        <button class="faq__questions-button">
+                            <p>Перед началом проекта, вы выезжаете на объект?</p>
+                            <img src="./images/Plus.svg" alt="" class="faq__questions-button-show">
+                        </button>
                         <div class="faq__questions-panel">
                             <p class="faq__questions-answer">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                         </div>
                     </li>
                     <li class="faq__questions-item">
-                        <button class="faq__questions-button">Каков в среднем бюджет на реализацию ваших проектов?</button>
+                        <button class="faq__questions-button">
+                            <p>Каков в среднем бюджет на реализацию ваших проектов?</p>
+                            <img src="./images/Plus.svg" alt="" class="faq__questions-button-show">
+                        </button>
                         <div class="faq__questions-panel">
                             <p class="faq__questions-answer">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                         </div>
                     </li>
                     <li class="faq__questions-item">
-                        <button class="faq__questions-button">Каков в среднем бюджет на реализацию ваших проектов?</button>
+                        <button class="faq__questions-button">
+                            <p>Каков в среднем бюджет на реализацию ваших проектов?</p>
+                            <img src="./images/Plus.svg" alt="" class="faq__questions-button-show">
+                        </button>
                         <div class="faq__questions-panel">
                             <p class="faq__questions-answer">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                         </div>
                     </li>
                     <li class="faq__questions-item">
-                        <button class="faq__questions-button">Берете ли вы проекты с маленькой площадью помещения?</button>
+                        <button class="faq__questions-button">
+                            <p>Берете ли вы проекты с маленькой площадью помещения?</p>
+                            <img src="./images/Plus.svg" alt="" class="faq__questions-button-show">
+                        </button>
                         <div class="faq__questions-panel">
                             <p class="faq__questions-answer">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                         </div>
